OSDA-275: Adjust DAO on the recent database update